--- a/src/styles.css
+++ b/src/styles.css
@@ -1,16 +1,17 @@
 .welcome-cont {
   margin-top: 150px;
-  width: 600px;
 }
 
 .welcome-action-cont {
   margin-top: 50px;
-  width: 700px;
+  margin-bottom: 50px;
+  padding: 50px;
   border: 1px solid lightgray;
   border-radius: 8.5px;
+  width: 800px;
 }
 
-.welcome-action-cont-title {
-  margin: 15px 0;
+.welcome-action-form-text-input {
+  margin-top: 5px;
 }
 /*# sourceMappingURL=styles.css.map */
