--- a/src/styles.css
+++ b/src/styles.css
@@ -14,4 +14,26 @@
 .welcome-action-form-text-input {
   margin-top: 5px;
 }
+.alert-box {
+  z-index:2;
+  width:350px;
+  position:fixed;
+  right:40px;
+  bottom:40px;
+}
+.fade-appear {
+  opacity: 0;
+  z-index: 1;
+}
+.fade-appear.fade-appear-active {
+  opacity: 1;
+  transition: opacity 300ms linear;
+}
+.fade-exit {
+  opacity: 1;
+}
+.fade-exit.fade-exit-active {
+  opacity: 0;
+  transition: opacity 300ms linear;
+}
 /*# sourceMappingURL=styles.css.map */
